--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <li>
                   Solved 200+ DSA questions on various platforms (150 Leetcode)
                 </li>
-                <li>50 day badges on Leetcode</li>
+                <li>50 day badges on LeedCode</li>
                 <li>Participated in MAKEATHON6 (Project:CureNavigator)</li>
                 <li>Participated in HACKLIPSE4.O (Project:ThoughtALoud)</li>
               </ul>
