mini circle added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/smoothscrool.css" />
   </head>
   <body>
-    <!-- <div id="minicircle"></div> -->
+    <div id="minicircle"></div>
     <div id="bg">
       <div id="main">
         <div id="intro">
@@ -120,6 +120,11 @@
                     <a href="https://allofusaredeadd.netlify.app"
                       >Portfolio Website</a
                     >
+                  </li>
+                  <li>
+                    <a href="https://ccloneprojectt.netlify.app"
+                      >Clone of INEXETER
+                    </a>
                   </li>
                   <li>
                     <a href="https://thoughtaloud.netlify.app">ThoughtALoud</a>
