--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
                     >
                   </li>
                   <li>
+                    <a href="https://leetcodetrackerr.netlify.app"
+                      >LeedCodeTracker</a
+                    >
+                  </li>
+                  <li>
                     <a href="https://1b7timetable.netlify.app/">TIMETABLE</a>
                   </li>
                   <li>
