more projects added

--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
                     >
                   </li>
                   <li>
+                    <a href="https://ttodolisttt.netlify.app"
+                      >Todo List (React)</a
+                    >
+                  </li>
+                  <li>
+                    <a href="https://cloneprjecttt.netlify.app">Clone of Cynthia Ugwu<a>
+                  </li>
+                  <li>
                     <a href="https://ccloneprojectt.netlify.app"
                       >Clone of INEXETER
                     </a>
