--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <div id="main">
         <div id="intro">
           <div class="desc">
-            <h1>Priyanshu Patel</h1>
+            <div id="cat">
+              <h1>Priyanshu Patel</h1>
+              <lottie-player src="https://lottie.host/751763bb-110b-4dc0-bd5e-ff4d856ffdec/Eo7dYPIry8.json" speed="1"  loop autoplay direction="1" mode="normal"></lottie-player>
+
+            </div>
+            
             <h3>
               <a href="#" class="btn-shine">Aspiring frontend developer</a>
             </h3>
@@ -28,6 +33,9 @@
             </h5>
           </div>
 
+
+
+          
           <div id="profile">
             <div>
               <p class="name">PROFILE</p>
@@ -174,8 +182,9 @@
               <p class="name">INTEREST</p>
               <div class="container">
                 <ul>
-                  <li>FRONTEND DEVELOPMENT</li>
+                  <li>MERN STACK DEVELOPMENT</li>
                   <li>Competitive Programming</li>
+                  <li>AI/ML</li>
                   <li>AURDINO</li>
                 </ul>
               </div>
@@ -199,6 +208,13 @@
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+      integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="/script.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   </body>
 </html>
